--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Ignorar el archivo .env
+.env
+
+# Ignorar la carpeta mongo_data
+mongo_data/
